Multi Pom Support (#110)
Multi-POM Support. It relies on using `POMScanner` to scan the relevant
parent pom files (by looking at the `<relativePath/>` directives. It
also combines the existing POMFinder and the POMModifier class - at
least for usage when testing